tests/deploy_errors/pipeline_bad_query/error.txt
Error: 
    3 |   badger = "snot",
    4 | pipeline
    5 |    dark horse
      |    ^^^^ Found the token `dark` but expected one of `<doc-comment>`, `create`, `define`, `mod`, `select`
    6 | end;
    7 |
